media/deluge/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deluge
  namespace: media
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: deluge
  template:
    metadata:
      labels:
        app: deluge
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: gluetun
          image: qmcgaw/gluetun
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
          volumeMounts:
            - name: wg-conf
              mountPath: /gluetun/wireguard/wg0.conf
              subPath: wg0.conf
        - name: deluge
          image: linuxserver/deluge:version-2.0.3-2201906121747ubuntu18.04.1
          volumeMounts:
            - name: config
              mountPath: /config
            - name: downloads
              mountPath: /downloads
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: deluge-config-pvc
        - name: downloads
          persistentVolumeClaim:
            claimName: media-pvc
        - name: wg-conf
          secret:
            secretName: mullvad-wireguard
