media/deluge/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deluge
  namespace: media
spec:
  selector:
    app: deluge
  ports:
    - name: web
      port: 80
      targetPort: 8112
